2011-12-22  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* android/jni/Android.mk.in, dc/Makefile.dc, win32/msc/Makefile: Add missing
  object img_tape.o to platform-specific Makefiles to make them work again
  (see Makefile.in revision 1.52).


2011-11-29  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cassette.c: Remove excessive logging, committed by mistake yesterday.


2011-11-28  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* cassette.c: Fix segfault when the -tape parameter points to a nonexistent
  file.


2011-11-16  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari_falcon.c, sound_falcon.c, falcon/sound_dma.S: Fix Falcon compilation
  errors with MiNTLib 0.59.1 and GCC 4.6.2 (still works with GCC 2.95.3 as
  tested under SpareMiNT).

* atari_basic.c, atari_curses.c, atari_falcon.c, atari_ps2.c, atari_x11.c,
  sound_falcon.c, sound_oss.c, sound.h, android/jni/sound.c, dos/atari_vga.c,
  dos/sound_dos.c, sdl/main.c, sdl/sound.[ch], win32/atari_win32.c,
  win32/sound.c, wince/port/atari_wince.c, wince/port/sound.c: Make
  Sound_Initialise fail gracefully instead of segfaulting when an option
  argument is missing. Do not initialise sound unnecessarily when the "-help"
  option is given.

* antic.c, atari_curses.c, atari.c, platform.h, ui_basic.c, ui.c: Cleanup:
  gather all declarations of curses_* functions together in platform.h.

* atari.c, configure.ac, devices.c, log.c, monitor.c, screen.c, sio.c,
  sound_oss.c, ui_basic.c, ui.c: Cleanup to make the ncurses target build with
  more restrictive CFLAGS (same as the sdl target).


2011-11-11  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* af80.[ch], atari.c, cartridge.[ch], devices.[ch], ide.[ch], input.c,
  pbi_bb.[ch], pbi_mio.[ch], pbi_proto80.[ch], pbi_xld.[ch], pbi.[ch],
  sdl/video.c: Add or fix Exit functions for files/resources that were not
  _explicitely_ closed/freed on exit.
  Add call to Atari800_ErrExit also when commandline-parsing fails.
  Previously when starting the dosvga target with "atari800 -artif",